--- a/app/html/bootflat.html
+++ b/app/html/bootflat.html
@@ -15,15 +15,83 @@
 
 <body ms-controller="bootflat" class="ms-controller">
     <div id="content">
-        <div>
-            图标字体：
-            <i class="icon icon-sliderR"></i>
-        </div>
+        <h1>Test bootflat</h1>
+        <a class="btn btn-primary">Flat button</a>
         <input ms-duplex="@name">
         <p>Hello,{{@name}}!</p>
         <ul>
             <li ms-for="($index,el) in @array">{{$index}}--{{el}}</li>
         </ul>
+    </div>
+    <div class="container">
+        <div class="example">
+            <h2>Buttons</h2>
+            <div class="row">
+                <div class="col-md-3">
+                    <button type="button" class="btn btn-block" ms-click="@buttonOnClick(el, 1, $event)">Normal</button>
+                </div>
+                <div class="col-md-3">
+                    <button type="button" class="btn btn-default btn-block">Default</button>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-3">
+                    <button type="button" class="btn btn-info btn-block">Info</button>
+                </div>
+                <div class="col-md-3">
+                    <button type="button" class="btn btn-warning btn-block">Warning</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="example">
+            <h2 class="example-title">Button groups</h2>
+            <div class="row">
+                <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+                    <div class="btn-group" role="group" aria-label="First group">
+                        <button type="button" class="btn btn-default">1</button>
+                        <button type="button" class="btn btn-default">2</button>
+                        <button type="button" class="btn btn-default">3</button>
+                        <button type="button" class="btn btn-default">4</button>
+                    </div>
+                    <div class="btn-group" role="group" aria-label="Second group">
+                        <button type="button" class="btn btn-default">5</button>
+                        <button type="button" class="btn btn-default">6</button>
+                        <button type="button" class="btn btn-default">7</button>
+                    </div>
+                    <div class="btn-group" role="group" aria-label="Third group">
+                        <button type="button" class="btn btn-default">8</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="example">
+            <h2 class="example-title">Button Dropdowns</h2>
+            <div class="row">
+                <div class="dropdown">
+                    <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true"
+                        aria-expanded="true">
+                        Dropdown
+                        <span class="caret"></span>
+                    </button>
+                    <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                        <li><a href="#">Action</a></li>
+                        <li><a href="#">Another action</a></li>
+                        <li><a href="#">Something else here</a></li>
+                        <li role="separator" class="divider"></li>
+                        <li><a href="#">Separated link</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="example">
+            <h2 class="example-title">Button groups</h2>
+            <div class="row">
+            </div>
+        </div>
     </div>
 </body>
 
