--- a/app/html/index.html
+++ b/app/html/index.html
@@ -2,23 +2,85 @@
 <html>
 
 <head>
-    <title>单页Demo</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>首页</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=9,10,11,edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
+    <meta http-equiv="Cache-Control" content="max-age=30">
+    <!--[if lt IE 9]>
+        <script src="assets/ie8/html5shiv.min.js"></script>
+    <![endif]-->
 </head>
 
-<body ms-controller="test">
-    <div id="content">
-        <div>
-            图标字体：
-            <i class="icon icon-sliderR"></i>
+<body ms-controller="index" class="ms-controller">
+    <nav class="navbar navbar-default">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#index-navbar-collapse" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">Logo</a>
+            </div>
+            <div class="collapse navbar-collapse" id="index-navbar-collapse">
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="active"><a href="#">Home Page<span class="sr-only">(current)</span></a></li>
+                    <li><a href="#">Download</a></li>
+                </ul>
+            </div>
         </div>
-        <input ms-duplex="@name">
-        <p>Hello,{{@name}}!</p>
-        <ul>
-            <li ms-for="($index,el) in @array">{{$index}}--{{el}}</li>
-        </ul>
+    </nav>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-sm-6 hidden-xs">
+                <div class="jumbotron">
+                    <h1>Image</h1>
+                </div>
+            </div>
+            <div class="col-sm-6 col-xs-12">
+                <div class="jumbotron">
+                    <form ms-validate="@validate">
+                        <div class="form-group" ms-class="@labelUserNameClass">
+                            <label class="control-label" for="index-login-username">{{@labelUserName}}</label>
+                            <input type="text" class="form-control" id="index-login-username" placeholder="User Name" ms-duplex="@username" ms-rules="{number:true,required:true}">
+                        </div>
+                        <div class="form-group" ms-class="@labelPasswordClass">
+                            <label class="control-label" for="index-login-password">{{@labelPassword}}</label>
+                            <input type="password" class="form-control" id="index-login-password" placeholder="Password" ms-duplex="@password" ms-rules="{required:true}">
+                        </div>
+                        <div class="checkbox">
+                            <label><input type="checkbox"> Remember me</label>
+                        </div>
+                        <div class="form-group">
+                            <button type="submit" class="btn btn-default" ms-click="@login($event) | prevent">Login</button>
+                        </div>
+                        <div class="form-group">
+                            <a href="#">Reset Password</a>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-12">
+                <div class="jumbotron">
+                    <h1>Download</h1>
+                </div>
+            </div>
+        </div>
+        <footer>
+            <h1>Footer</h1>
+        </footer>
     </div>
 </body>
+
+<!--[if lt IE 9]>
+    <script src="assets/ie8/respond.src.js"></script>
+<![endif]-->
+<!--[if lt IE 10]>
+    <script src="assets/ie8/placeholder.js"></script>
+<![endif]-->
 
 </html>
